Renamed module and blocks

--- a/yext.info.yml
+++ b/yext.info.yml
@@ -1,4 +1,4 @@
-name: Yext Answers
+name: Yext AI Search
 description: "Module to add a Yext Answers experience to your site"
 type: module
 core: 8.x
