--- a/yext.info.yml
+++ b/yext.info.yml
@@ -1,5 +1,4 @@
 name: Yext AI Search
 description: "Module to add a Yext Answers experience to your site"
 type: module
-core: 8.x
-core_version_requirement: ^8 || ^9
+core_version_requirement: ^8 || ^9 || ^10
